--- a/packages/styles/scss/components/_textcard.scss
+++ b/packages/styles/scss/components/_textcard.scss
@@ -33,7 +33,8 @@
         }
       }
 
-      @include breakpoint("medium") {
+      @include breakpoint("medium", true) {
+        --max-width: 100%;
         padding: px-to-rem(32px) px-to-rem(40px);
       }
 
@@ -54,7 +55,8 @@
 
           padding: px-to-rem(24px) px-to-rem(40px);
 
-          @include breakpoint("medium") {
+          @include breakpoint("medium", true) {
+            --max-width: 100%;
             padding: px-to-rem(24px) px-to-rem(40px);
           }
 
